bootstrap - style.css
aula 07

--- a/web/exercicios 06/index.html
+++ b/web/exercicios 06/index.html
@@ -28,13 +28,13 @@
                 <div class="col-md-6 col-12 caixa-blue" > 04 </div> 
                 <div class="col-md-6 col-12 caixa-blue" > 05 </div>
                        
-                     <div class="col-12 caixa-roxo"> 06 </div> 
+                     <div class="col-3 col-md-12 caixa-roxo"> 06 </div> 
 
-                     <div class="col-12 caixa-roxo"> 07 </div>
+                     <div class="col-3 col-md-12 caixa-roxo"> 07 </div>
 
-                     <div class="col-12 caixa-roxo"> 08 </div>
+                     <div class="col-3 col-md-12 caixa-roxo"> 08 </div>
 
-                     <div class="col-12 caixa-roxo"> 09 </div>
+                     <div class="col-3 col-md-12 caixa-roxo"> 09 </div>
                 
             </div>
         </div>
