--- a/web/exercicio_bootstrap/index.html
+++ b/web/exercicio_bootstrap/index.html
@@ -74,7 +74,7 @@
                   <div class="caixa_geral">
 
                      <!--inicio titulo-->
-                     <div class="col-12 col-md-4 caixa_titulo">
+                     <div class="col-12 caixa_titulo">
                      <img src="fotos/nome.jpg" height="300px" >
                      </div>
                      <!--fim titulo-->
