--- a/web/exercicio_bootstrap/index.html
+++ b/web/exercicio_bootstrap/index.html
@@ -33,7 +33,7 @@
             
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Naruto Shippuden</a>
+                  <a class="navbar-brand" href="#" style="font-size: 40px;">Naruto Shippuden</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -75,7 +75,7 @@
 
                      <!--inicio titulo-->
                      <div class="col-12 caixa_titulo">
-                     <img src="fotos/nome.jpg" height="300px" >
+                     <img src="fotos/nome.jpg" style="height: 300px; width: 100%;">
                      </div>
                      <!--fim titulo-->
                     </div>  
